# MedicalZooPytorch

./: .gitignore  README.md  pyproject.toml  testme.py
lib/augment3D/: random_rescale.py  random_rotate.py
lib/losses3D/: BCE_dice.py  BaseClass.py  generalized_dice.py
lib/medloaders/: CT_boneSeg.py  CT_organSeg.py  PETCT_lesionDetection.py  __init__.py  medical_image_process.py  medical_loader_utils.py
lib/medzoo/: Unet3D.py  deepMedic.py
lib/test/: BaseWriter.py  viz.py
lib/train/: BaseTrainer.py  trainer.py
lib/utils/: configParsing.py
src/medzoopytorch/augment3D/: __init__.py  random_rescale.py  random_rotate.py
src/medzoopytorch/losses3D/: BCE_dice.py  BaseClass.py  ContrastiveLoss.py  __init__.py  basic.py  dice.py  generalized_dice.py  pixel_wise_cross_entropy.py  tags_angular_loss.py  weight_cross_entropy.py  weight_smooth_l1.py
src/medzoopytorch/medloaders/: COVIDxdataset.py  CT_boneSeg.py  CT_organSeg.py  Covid_Segmentation_dataset.py  PETCT_lesionDetection.py  __init__.py  brats2018.py  brats2019.py  brats2020.py  covid_ct_dataset.py  iseg2017.py  iseg2019.py  ixi_t1_t2.py  medical_loader_utils.py  miccai_2019_pathology.py  mrbrains2018.py
src/medzoopytorch/medzoo/: DenseVoxelNet.py  Densenet3D.py  HighResNet3D.py  HyperDensenet.py  ResNet3DMedNet.py  ResNet3D_VAE.py  Unet2D.py  (+5 more)
tests/: inference.py  test_augmentations.py  test_basewriter.py  test_covid_ct.py  test_dataloaders.py  test_general_utils.py  test_losses3D.py  test_medical_3D_augemt.py  test_medical_3D_preprocessing.py  test_models.py  test_vizual.py  train_with_trainer_class.py
(+9 files in other folders)
