[tool.poetry]
name = "medzoopytorch"
version = "0.1.0"
description = ""
authors = ["Kyle Gielow <kyle.gielow@aiq-solutions.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
scipy = "^1.7.1"
numpy = "^1.21.1"
torch = "^1.9.0"
nibabel = "^3.2.1"
tensorboard = "^2.5.0"
torchsummary = "^1.5.1"
torchnet = "^0.0.4"
matplotlib = "^3.4.2"
Pillow = "^8.3.1"
torchsummaryX = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
